# llm-server

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
llm_server/: api.py  cli.py  config.py  main.py  model.py  schemas.py  service.py
src/llm_server/: api.py  cli.py  config.py  main.py  model.py  service.py
