[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "llm-server"
requires-python = ">=3.9"
dependencies = [
  "accelerate >= 0.26.0",
  "einops >= 0.6.0",
  "fastapi >= 0.104.0",
  "httpx >= 0.23.3",
  "numpy >= 1.20.0",
  "pydantic >= 2.3.0",
  "pydantic-settings >= 2.0.3",
  "transformers >= 4.36",
  "uvicorn >= 0.20.0"
]
version = "0.1.0"

[project.scripts]
llm-api = "llm_server.main:serve"
llm-cli = "llm_server.cli:app"

[project.optional-dependencies]
dev = [
  "ruff >= 0.1.8",
  "pre-commit >= 3.4.0"
]

cli = [
  "typer >= 0.6"
]

[tool.setuptools]
packages = ["llm_server"]
