[project]
name = "llm-server"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "accelerate>=0.26.1",
  "annotated-types>=0.6.0",
  "click>=8.1.7",
  "einops>=0.7.0",
  "fastapi>=0.109.0",
  "h11>=0.14.0",
  "httpx>=0.26.0",
  "numpy>=1.20.0",
  "pydantic>=2.5.3",
  "pydantic-core>=2.14.6",
  "pydantic-settings>=2.1.0",
  "starlette>=0.35.1",
  "transformers>=4.36.2",
  "typing-extensions>=4.9.0",
  "uvicorn>=0.25.0",
]

[project.scripts]
llm-api = "llm_server.main:serve"
llm-cli = "llm_server.cli:app"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[project.optional-dependencies]
dev = ["ruff >= 0.1.8", "pre-commit >= 3.4.0"]

cli = ["typer >= 0.6"]

[tool.ruff.lint]
select = ["E", "F", "I", "D"]
ignore = ["D100", "D104", "D105", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
cli = [
    "typer>=0.20.0",
]
